docs/deploy/01-k8s-manifests/.bak-placeholder-fix-20260910-081906/50-scene-service.svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"domain-service","app.kubernetes.io/name":"scene","app.kubernetes.io/part-of":"rust-game-server"},"name":"scene-service","namespace":"rust-game-server"},"spec":{"ports":[{"name":"grpc","port":50057,"protocol":"TCP","targetPort":50057},{"name":"metrics","port":9464,"protocol":"TCP","targetPort":9464}],"selector":{"app.kubernetes.io/name":"scene"},"type":"ClusterIP"}}
  creationTimestamp: "2026-09-06T10:40:48Z"
  labels:
    app.kubernetes.io/component: domain-service
    app.kubernetes.io/name: scene
    app.kubernetes.io/part-of: rust-game-server
  name: scene-service
  namespace: rust-game-server
  resourceVersion: "189660"
  uid: 1793b124-02fd-4bde-8e26-a1898f052216
spec:
  clusterIP: 10.43.82.51
  clusterIPs:
  - 10.43.82.51
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: grpc
    port: 50057
    protocol: TCP
    targetPort: 50057
  - name: metrics
    port: 9464
    protocol: TCP
    targetPort: 9464
  selector:
    app.kubernetes.io/name: scene
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
